Fix the input submit button in the form that did not render on IPhone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,7 @@ textarea {
     font-size: 130%; /* Why can I not center it with margin: 0 auto ? */
     font-weight: 700;
     box-shadow: 2px 2px 1px var(--rose);
+    -webkit-appearance: none; 
 }
 
 /* Footer */
